--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,7 @@ body.block-editor-page {
 	}
 	// We need the styles scoped to "body" to be added to the
 	// div.editor-styles wrapper
-	font-family: $editor-font;
+	font-family: $default-font;
 	font-size: $editor-font-size;
 	line-height: $editor-line-height;
 	color: $gray-900;
